[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/screens/UIHelper.tscn" type="PackedScene" id=1]
[ext_resource path="res://resources/themes/MenuTheme.tres" type="Theme" id=2]
[ext_resource path="res://scripts/screens/ZoneNavigationScreen.gd" type="Script" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="ZoneNavigationScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="UIHelper" parent="." instance=ExtResource( 1 )]

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.145098, 0.141176, 0.192157, 1 )

[node name="Console" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
color = Color( 0.282353, 0.262745, 0.364706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Console"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 25.0
margin_right = -25.0
margin_bottom = -25.0
text = "What zone would you like to land at?"
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="Console"]
margin_left = 25.0
margin_top = 80.0
margin_right = 387.0
margin_bottom = 450.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DropZone1Button" type="Button" parent="Console/Menu" groups=["button"]]
margin_right = 362.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
theme = ExtResource( 2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "- Drop zone 1"
align = 0

[node name="DropZone2Button" type="Button" parent="Console/Menu" groups=["button"]]
margin_top = 60.0
margin_right = 362.0
margin_bottom = 110.0
rect_min_size = Vector2( 0, 50 )
theme = ExtResource( 2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
disabled = true
text = "- Drop zone 2"
align = 0

[node name="DropZone3Button" type="Button" parent="Console/Menu" groups=["button"]]
margin_top = 120.0
margin_right = 362.0
margin_bottom = 170.0
rect_min_size = Vector2( 0, 50 )
theme = ExtResource( 2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
disabled = true
text = "- Drop zone 3"
align = 0

[node name="BackButton" type="Button" parent="Console/Menu" groups=["button"]]
margin_top = 180.0
margin_right = 362.0
margin_bottom = 230.0
rect_min_size = Vector2( 0, 50 )
theme = ExtResource( 2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "- Back"
align = 0

[connection signal="pressed" from="Console/Menu/DropZone1Button" to="." method="_on_DropZone1Button_pressed"]
[connection signal="pressed" from="Console/Menu/BackButton" to="." method="_on_BackButton_pressed"]
